--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.datasource.password=root
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/imako_crm
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=dev
