--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/imako_crm
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
